<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>quad_sim_interfaces</name>
  <version>0.0.0</version>
  <description>This package contains some message types that can be used with the quadcopter simulation framework comprised of quad_anim, quad_sim and quad_gnc.</description>
  <maintainer email="vatsalasitkumar.joshi@mavs.uta.edu">Vatsal Joshi</maintainer>
  <license>Apache-2.0</license>

  <!-- Define dependency on external libraries -->
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>

  <!-- Define execution-time dependencies -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Define dependency of the build tool -->
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Added here because mentioned in https://docs.ros.org/en/humble/Tutorials/Beginner-Client-Libraries/Custom-ROS2-Interfaces.html -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
